# cs-scalp-bot

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  GITHUB_READY.md  LICENSE  PRE_FLIGHT_CHECKLIST.md  README.md  README.md.backup  RISK_MANAGEMENT.md  SECURITY.md  SETUP_GUIDE.md  config.example.json  docker-compose.yml  pyproject.toml  pytest.ini  run.sh
src/scalp_bot/: __init__.py
src/scalp_bot/api/: app.py  routes.py
src/scalp_bot/core/: __init__.py  engine.py  strategy.py
src/scalp_bot/models/: __init__.py  config.py  trade.py
src/scalp_bot/services/: __init__.py  broker.py
src/scalp_bot/templates/: dashboard.html
tests/: __init__.py  conftest.py  test_broker.py  test_broker_simple.py  test_config.py  test_risk_management.py  test_strategy.py
