[project]
name = "scalp-bot"
version = "0.1.0"
description = "Automated scalping trading bot for Charles Schwab with FastAPI web interface"
readme = "README.md"
authors = [
    { name = "andrewimpellitteri", email = "andrewimpellitteri@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "schwab-py>=1.5.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.20.0",
    "pandas>=2.2.0",
    "numpy>=2.1.0",
    "python-multipart>=0.0.12",
    "jinja2>=3.1.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "black>=24.8.0",
    "ruff>=0.7.0",
]

[project.scripts]
scalp-bot = "scalp_bot:main"

[build-system]
requires = ["uv_build>=0.8.6,<0.9.0"]
build-backend = "uv_build"
